Gate 6C-C: correct strip-types and API-24 native compatibility